// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text renders correctly > with align 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 center_4ef0a117bc singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly > with color 1`] = `
<div
  className="typography_b59898fd6b secondary_8c8b98f792 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly > with element 1`] = `
<p
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 text_fa06f86ba0 text2Normal_fc6192f39e"
  data-testid="text"
>
  text
</p>
`;

exports[`Text renders correctly > with element as children 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e"
  data-testid="text"
>
  <div>
    text
  </div>
</div>
`;

exports[`Text renders correctly > with empty props 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Normal_fc6192f39e"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly > with type 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text1Normal_825d27cf03"
  data-testid="text"
>
  text
</div>
`;

exports[`Text renders correctly > with weight 1`] = `
<div
  className="typography_b59898fd6b primary_98f8177071 start_4d6f783fa9 singleLineEllipsis_997d25a8b3 text_fa06f86ba0 text2Medium_ccd0608b3e"
  data-testid="text"
>
  text
</div>
`;
